[vue, sass] add efect in image uploader, fix margins, restore scrollbar in navbar on token page #6391

--- a/assets/scss/avatar.sass
+++ b/assets/scss/avatar.sass
@@ -10,6 +10,20 @@
         position: absolute
         transform: translate(-50%, -50%)
 
+    &:after
+        content: ""
+        position: absolute
+        top: 0
+        left: 0
+        width: 100%
+        height: 100%
+        border-radius: 50%
+        background: rgba(0, 0, 0, 0)
+        transition: background 1s ease
+
+    &:hover:after
+        background: rgba(0, 0, 0, 0.3)
+
 .avatar__small
     max-width: 22px
     max-height: 22px
